--- a/frontend/src/component/user/Profile.css
+++ b/frontend/src/component/user/Profile.css
@@ -26,9 +26,11 @@
 }
 
 .profileContainer > div:first-child > img {
-	width: 20vmax;
-	border-radius: 100%;
+	width: 200px;
+	border-radius: 50%;
 	transition: all 0.5s;
+	background: #dadada !important;
+	height: 200px;
 }
 
 .profileContainer > div:first-child > img:hover {
