--- a/frontend/src/component/user/loginSignUp.css
+++ b/frontend/src/component/user/loginSignUp.css
@@ -13,7 +13,7 @@
 
 .LoginSignUpBox {
 	background-color: white;
-	/* width: 25vw; */
+	margin-right: 30px;
 	width: 350px;
 	height: 70vh;
 	box-sizing: border-box;
